--- a/workflow-laravel-mix-6-2/src/caseStudy__Janus.html
+++ b/workflow-laravel-mix-6-2/src/caseStudy__Janus.html
@@ -4,11 +4,19 @@
     <title>Portfolio</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <meta name="description" content="">
+    <meta property="og:description" content="Site Portfolio">
     <!-- Meta Partage -->
+    <meta property="og:site_name" content="Arthur Halbart">
+    <meta property="og:title" content="Portfolio">
+    <meta property="og:description" content="Portfolio d'Arthur Halbart">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.arthurhalbart.be/projets/tfa">
+    <meta property="og:image" content="http://example.com/assets/images/image.jpg">
+    <meta property="og:image:width" content="1800">
+    <meta property="og:image:height" content="945">
     <!-- Favicon -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="assets/images/ah.svg" type="image/x-icon">
     <!--  Font  -->
       <!--Futura-->
     <link rel="stylesheet" href="https://use.typekit.net/azx2wqu.css">
@@ -88,7 +96,7 @@
       </div>
       <div  class="txt__CS">
         <p class="txt_big reveal">Pour notre premier projet de l’année, nous devions créer un site internet sur un influenceur. Le but de l’exercice était de créer un site internet promotionnel, critique ainsi que factuel pour l’influenceur. On devait créer deux directions artistiques complètement différentes entre la page promotionnelle et la page critique.
-        Pour ma part, j’ai choisi l’artiste/Youtubeur Feldup<p>
+        Pour ma part, j’ai choisi l’artiste/Youtubeur&nbsp;Feldup<p>
     </section>
 
     <section class="section section__priseContact section__debut">
@@ -98,9 +106,9 @@
       <div class="txt__pC">
         <div class="conteneur_p reveal">
           <p>Pour commencer le projet, j’ai dû d’abord analyser la charte graphique de l’influenceur, s’il en avait une, dans le but que les pages promotionnelle et factuelle correspondent à l’identité de l’artiste.
-            Quand j’ai fait mes recherches, je suis tout d’abord allé voir sa chaîne YouTube, où j’ai trouvé beaucoup de miniatures dans un style horrifique.
+            Quand j’ai fait mes recherches, je suis tout d’abord allé voir sa chaîne YouTube, où j’ai trouvé beaucoup de miniatures dans un style&nbsp;horrifique.
             Donc, pour commencer, je partais dans un style horrifique, mais avec plus de recherches, j’ai appris que c’était aussi un chanteur avec une direction artistique plus sobre.
-            Après réflexion, je suis parti sur la direction artistique la plus sobre pour parler au plus de personnes.</p>
+            Après réflexion, je suis parti sur la direction artistique la plus sobre pour parler au plus de&nbsp;personnes.</p>
         </div>
 
         <div class="img__pC">
@@ -111,15 +119,15 @@
     <section class="section section__problèmeMajeurs">
       <div><h3 class="eight reveal">Choix des Typographies</h3></div>
 
-      <div class="txt_big reveal"><p>Pour le bien du projet, j’ai dû choisir des typographies qui contrastaient suffisamment pour que les deux directions artistiques soient complètement différenciées.</p></div>
+      <div class="txt_big reveal"><p>Pour le bien du projet, j’ai dû choisir des typographies qui contrastaient suffisamment pour que les deux directions artistiques soient complètement&nbsp;différenciées.</p></div>
 
       <div class="txt reveal">
         <div>
-          <p>Pour les choix de typographie, j’ai choisi la typographie Roboto pour ma page promotionnelle ainsi que pour la page factuelle. J’ai pris cette typo car elle a un style proche de celui d’une machine à écrire, ce qui correspondait parfaitement au thème. En plus, c’est une police monospace, ce qui rend la lecture des textes plus lisible. </p>
+          <p>Pour les choix de typographie, j’ai choisi la typographie Roboto pour ma page promotionnelle ainsi que pour la page factuelle. J’ai pris cette typo car elle a un style proche de celui d’une machine à écrire, ce qui correspondait parfaitement au thème. En plus, c’est une police monospace, ce qui rend la lecture des textes plus&nbsp;lisible. </p>
         </div>
         <div>
-          <p>Pour ma page critique, j’ai choisi la typographie Mason Serif OT, puisqu’il fallait deux directions artistiques complètement différentes. Elle a un style gothique, ce qui contraste complètement avec la typographie Roboto.
-          Pour le texte, j’ai choisi la typographie Neue Kabel. C’est une police sans serif, ce qui permet une meilleure lisibilité.</p>
+          <p>Pour ma page critique, j’ai choisi la typographie Mason Serif OT, puisqu’il fallait deux directions artistiques complètement différentes. Elle a un style gothique, ce qui contraste complètement avec la typographie&nbsp;Roboto.
+          Pour le texte, j’ai choisi la typographie Neue Kabel. C’est une police sans serif, ce qui permet une meilleure&nbsp;lisibilité.</p>
         </div>
       </div>
     </section>
@@ -130,13 +138,13 @@
       </div>
 
       <div class="txt">
-        <p class="reveal reveal">Pour ma page promotionnelle ainsi que ma page factuelle, j’ai décidé de partir sur un style minimaliste, qui correspond à la direction artistique qu’il utilise pour ses affiches de concert ou sa promotion.</p>
+        <p class="reveal reveal">Pour ma page promotionnelle ainsi que ma page factuelle, j’ai décidé de partir sur un style minimaliste, qui correspond à la direction artistique qu’il utilise pour ses affiches de concert&nbsp;ou sa promotion.</p>
 
-        <p class="reveal">Pour la mise en page des textes, je les ai présentés sous forme de dossier, car lorsqu’il réalise une vidéo, il effectue à chaque fois des recherches poussées et structure son contenu en chapitres.
-        Pour les couleurs, j’ai utilisé un fond blanc cassé et du gris pour le texte, dans le but d’obtenir un rendu minimaliste.</p>
+        <p class="reveal">Pour la mise en page des textes, je les ai présentés sous forme de dossier, car lorsqu’il réalise une vidéo, il effectue à chaque fois des recherches poussées et structure son contenu en&nbsp;chapitres.
+        Pour les couleurs, j’ai utilisé un fond blanc cassé et du gris pour le texte, dans le but d’obtenir un rendu&nbsp;minimaliste.</p>
 
         <p class="reveal">Pour ma page critique, afin d’obtenir un résultat à l’opposé des deux autres pages, je suis parti sur une direction artistique brutaliste, avec une mise en page moins structurée, composée de grands titres et de textes plus petits.
-        Pour les couleurs, j’ai utilisé un fond sombre, des typographies gris clair, ainsi qu’une touche de violet.</p>
+        Pour les couleurs, j’ai utilisé un fond sombre, des typographies gris clair, ainsi qu’une touche de&nbsp;violet.</p>
       </div>
     </section>
 
@@ -159,30 +167,23 @@
         <div><img src="assets/images/mockup_janus/mockup_janus_05.webp" alt=""></div>
       </div>
     </section>
+
+    <section class="section section__priseContact button_website">
+      <div class="title__pC">
+        <a class="BTN button" target="_blank" href="https://www.arthurhalbart.be/projets/janus/index.html">
+          <h3 class="eight reveal">Vers le site</h3>
+        </a>
+      </div>
+
+    </section>
   </main>
 
   <footer class="section__footer">
-    <div class="logo_secondaire"></div>
-    <div class="sous__nav">
-      <ul>
-        <a href="">
-          <li>
-            <p>à propos</p>
-          </li>
-        </a>
-        <a href="">
-          <li>
-            <p>Projets</p>
-          </li>
-        </a>
-        <a href="">
-          <li>
-            <p>Crédits</p>
-          </li>
-        </a>
-      </ul>
+    <div class="element_footer">
+      <a target="_blank" href="https://github.com/arthur-halbart">GitHub</a>
+      <p>© halbart-arthur 2025</p>
+      <a href="credits.html">Crédits</a>
     </div>
-    <div class="copyright"></div>
   </footer>
 
   </body>
