--- a/workflow-laravel-mix-6-2/src/caseStudy__prux.html
+++ b/workflow-laravel-mix-6-2/src/caseStudy__prux.html
@@ -4,11 +4,19 @@
     <title>Portfolio</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <meta name="description" content="">
+    <meta property="og:description" content="Site Portfolio">
     <!-- Meta Partage -->
+    <meta property="og:site_name" content="Arthur Halbart">
+    <meta property="og:title" content="Portfolio">
+    <meta property="og:description" content="Portfolio d'Arthur Halbart">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.arthurhalbart.be/projets/tfa">
+    <meta property="og:image" content="http://example.com/assets/images/image.jpg">
+    <meta property="og:image:width" content="1800">
+    <meta property="og:image:height" content="945">
     <!-- Favicon -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="assets/images/ah.svg" type="image/x-icon">
     <!--  Font  -->
       <!--Futura-->
     <link rel="stylesheet" href="https://use.typekit.net/azx2wqu.css">
@@ -82,7 +90,7 @@
     <main>
       <section class="section section__miseSituation">
         <div>
-          <h2 class="eight reveal">Mise en&nbsp;situation</h2>
+          <h2 class="eight reveal">Mise en situation</h2>
         </div>
         <div  class="txt__CS">
           <p class="txt_big reveal">Dans le cadre de notre projet Rethinking UX (option Design Web & Transmédia à la Haute-École Albert Jacquard), nous avons dû réfléchir, par groupe, à une manière de réaménager une salle à disposition des étudiants (A083–A084). À la base, cette pièce appartenait à l’école secondaire Henri Maus, mais elle a été laissée à l’abandon et n’était plus utilisée depuis quelques&nbsp;années.</p>
@@ -131,7 +139,7 @@
       </section>
 
       <section class="section section__premieresIdees">
-        <div><h3 class="eight reveal">Premières&nbsp;idées</h3></div>
+        <div><h3 class="eight reveal">Premières idées</h3></div>
 
         <div class="img__premieresIdees"><img src="assets/images/CaseStudy_Prux/idee_01@2x.webp" alt=""></div>
 
@@ -150,7 +158,7 @@
 
       <section class="section section__miseCommun">
         <div>
-          <h3 class="eight reveal">Mise en&nbsp;Commun</h3>
+          <h3 class="eight reveal">Mise en Commun</h3>
         </div>
 
         <div class="bloc__txt">
@@ -178,27 +186,11 @@
     </main>
 
     <footer class="section__footer">
-      <div class="logo_secondaire"></div>
-      <div class="sous__nav">
-        <ul>
-          <a href="">
-            <li>
-              <p>à propos</p>
-            </li>
-          </a>
-          <a href="">
-            <li>
-              <p>Projets</p>
-            </li>
-          </a>
-          <a href="">
-            <li>
-              <p>Crédits</p>
-            </li>
-          </a>
-        </ul>
+      <div class="element_footer">
+        <a target="_blank" href="https://github.com/arthur-halbart">GitHub</a>
+        <p>© halbart-arthur 2025</p>
+        <a href="credits.html">Crédits</a>
       </div>
-      <div class="copyright"></div>
     </footer>
 
   </body>
