--- a/workflow-laravel-mix-6-2/src/credits.html
+++ b/workflow-laravel-mix-6-2/src/credits.html
@@ -29,11 +29,13 @@
   </head>
   <body>
     <div class="transition-overlay"></div>
+
+    <!-- Bruit-->
     <canvas id="noiseCanvas"></canvas>
-
-    <div class="fond fond__designFiction element__graphique__fond_fixe"></div>
-    <div class="fond fond__designFiction element__graphique__fond"></div>
-
+    <!-- Element >Fond-->
+    <div class="fond element__graphique__fond_fixe"></div>
+    <div class="fond element__graphique__fond"></div>
+    <!-- Nav -->
     <nav class=" section__nav">
       <div>
         <div class="logo">
@@ -70,69 +72,78 @@
     <div class="block__btn">
       <button class="menu-btn"><i></i><i></i><i></i>menu</button>
     </div>
-
+    <!-- Header -->
     <header class="section section__header__CS">
       <section>
+        <section class="section section__miseSituation">
           <div>
-            <h1 class="eight reveal">Design Fiction</h1>
-          </div>
-          <div class="prt2__header__CS">
-            <div class="txt">
-                <p class="reveal">Projet CPCJ</p>
-              </div>
-              <div class="img__header__CS">
-                <img src="assets/images/mockup_designFiction/img_designFiction_header.webp" alt="">
-              </div>
+            <h2 class="eight reveal">Crédits</h2>
           </div>
       </section>
   </header>
 
   <main>
-    <section class="section section__miseSituation">
-      <div>
-        <h2 class="eight reveal">Mise en situation</h2>
-      </div>
-      <div  class="txt__CS">
-        <p class="txt_big reveal">Dans le cadre d’un projet scolaire, nous avons dû réaliser une design fiction, ce qui consiste à créer un « What if » dans un futur proche. Par la suite, nous devions concevoir un site internet expliquant en quoi consiste ce « What if », ou bien développer une application directement liée au&nbsp;sujet.</p>
+    <section class="section section__problèmeMajeurs section__credits">
+      <div><h3 class="eight reveal">Janus</h3></div>
 
-        <p class="reveal">Pour ma part, j’ai pris comme sujet « Et si les personnes avec un casier judiciaire étaient restreintes dans les lieux&nbsp;publics ? ». </p>
-      </div>
-    </section>
+      <div class=" reveal">
+        <ul>
+          <li><span class="txt_big">Code :</span> Visual Studio Code</li>
 
-    <section class="section section__priseContact">
-      <div class="title__pC">
-        <h3 class="eight reveal">Mockup</h3>
-      </div>
-      <div class="section mockup">
-        <div class="img__pC">
-          <img src="assets/images/mockup_designFiction/mockup_01.webp" alt="">
-        </div>
-          <div class="img__pC">
-            <img src="assets/images/mockup_designFiction/mockup_02.webp" alt="">
-          </div>
-      </div>
-      </div>
-      <div class="petit_img__pC">
-        <div><img src="assets/images/mockup_designFiction/mockup_03.webp" alt=""></div>
-        <div><img src="assets/images/mockup_designFiction/mockup_04.webp" alt=""></div>
-        <div><img src="assets/images/mockup_designFiction/mockup_05.webp" alt=""></div>
-      </div>
-    </section>
+          <li><span class="txt_big">Language :</span> Html, CSS,Javascript</li>
 
-    <section class="section section__priseContact button_website">
-      <div class="title__pC">
-        <a class="BTN button3" target="_blank" href="https://www.arthurhalbart.be/projets/Design-Fiction/">
-          <h3 class="eight reveal">Vers le site</h3>
-        </a>
-      </div>
+          <li><span class="txt_big">Image :</span> Miniatures de la chaine youtube et image promtionelle concert</li>
 
-    </section>
+          <li><span class="txt_big"> Modification imgages :</span>Photoshop</li>
+
+          <li><span class="txt_big">IA :</span> Elle a servi à la correction des textes</li>
+
+          <li><span class="txt_big"> Inspiration :</span>Pinterest, Awwwards et Dribble</li>
+        </ul>
+      </div>
+    </section> 
+
+    <section class="section section__problèmeMajeurs section__credits">
+      <div><h3 class="eight reveal">PRUX</h3></div>
+
+      <div class=" reveal">
+        <ul>
+          <li><span class="txt_big">Code :</span> Visual Studio Code</li>
+
+          <li><span class="txt_big">Language :</span> Html, SCSS,Javascript</li>
+
+          <li><span class="txt_big">Image :</span> Avec notre apparail photo</li>
+
+          <li><span class="txt_big">IA :</span> Elle a servi à la correction des textes</li>
+
+          <li><span class="txt_big"> Inspiration :</span>Pinterest, Awwwards et Dribble</li>
+        </ul>
+      </div>
+    </section> 
+
+    <section class="section section__problèmeMajeurs section__credits">
+      <div><h3 class="eight reveal">Design Fiction</h3></div>
+
+      <div class="dernier_el reveal">
+        <ul>
+          <li><span class="txt_big">Code :</span> Visual Studio Code</li>
+
+          <li><span class="txt_big">Language :</span> Html, SCSS,Javascript</li>
+
+          <li><span class="txt_big">Image :</span> Avec notre apparail photo</li>
+
+          <li><span class="txt_big">IA :</span> Elle a servi à la correction des textes</li>
+
+          <li ><span class="txt_big"> Inspiration :</span>Pinterest, Awwwards et Dribble</li>
+        </ul>
+      </div>
+    </section> 
   </main>
 
   <footer class="section__footer">
     <div class="element_footer">
       <a target="_blank" href="https://github.com/arthur-halbart">GitHub</a>
-      <p>© halbart-arthur 2025</p>
+      <p class="copyright">© halbart-arthur 2025</p>
       <a href="credits.html">Crédits</a>
     </div>
   </footer>
