--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -4,11 +4,19 @@
     <title>Portfolio</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <meta name="description" content="">
+    <meta property="og:description" content="Site Portfolio">
     <!-- Meta Partage -->
+    <meta property="og:site_name" content="Arthur Halbart">
+    <meta property="og:title" content="Portfolio">
+    <meta property="og:description" content="Portfolio d'Arthur Halbart">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.arthurhalbart.be/projets/tfa">
+    <meta property="og:image" content="http://example.com/assets/images/image.jpg">
+    <meta property="og:image:width" content="1800">
+    <meta property="og:image:height" content="945">
     <!-- Favicon -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="assets/images/ah.svg" type="image/x-icon">
     <!--  Font  -->
       <!--Futura-->
     <link rel="stylesheet" href="https://use.typekit.net/azx2wqu.css">
@@ -141,32 +149,11 @@
     </main>
 
     <footer class="section__footer">
-      <div class="logo_secondaire"></div>
-      <div class="sous__nav">
-        <ul>
-          <a href="index.html">
-            <li>
-              <p>Accueil</p>
-            </li>
-          </a>
-          <a href="index.html#presentation">
-            <li>
-              <p>à propos</p>
-            </li>
-          </a>
-          <a href="index.html#projets">
-            <li>
-              <p>Projets</p>
-            </li>
-          </a>
-          <a href="">
-            <li>
-              <p>Crédits</p>
-            </li>
-          </a>
-        </ul>
+      <div class="element_footer">
+        <a target="_blank" href="https://github.com/arthur-halbart">GitHub</a>
+        <p>© halbart-arthur 2025</p>
+        <a href="credits.html">Crédits</a>
       </div>
-      <div class="copyright"></div>
     </footer>
 
 
