--- a/workflow-laravel-mix-6-2/src/caseStudy__Janus.html
+++ b/workflow-laravel-mix-6-2/src/caseStudy__Janus.html
@@ -96,7 +96,8 @@
       </div>
       <div  class="txt__CS">
         <p class="txt_big reveal">Pour notre premier projet de l’année, nous devions créer un site internet sur un influenceur. Le but de l’exercice était de créer un site internet promotionnel, critique ainsi que factuel pour l’influenceur. On devait créer deux directions artistiques complètement différentes entre la page promotionnelle et la page critique.
-        Pour ma part, j’ai choisi l’artiste/Youtubeur&nbsp;Feldup<p>
+        Pour ma part, j’ai choisi l’artiste/Youtubeur&nbsp;Feldup</p>
+      </div>
     </section>
 
     <section class="section section__priseContact section__debut">
@@ -110,6 +111,7 @@
             Donc, pour commencer, je partais dans un style horrifique, mais avec plus de recherches, j’ai appris que c’était aussi un chanteur avec une direction artistique plus sobre.
             Après réflexion, je suis parti sur la direction artistique la plus sobre pour parler au plus de&nbsp;personnes.</p>
         </div>
+      </div>
 
         <div class="img__pC">
           <img src="assets/images/CaseStudy_Prux/moodboard.webp" alt="">
