--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -99,7 +99,7 @@
 
     <main>
       <section id="presentation" class="section section__presentation">
-        <div><img class="img__presentation" src="assets/images/img_header_portfolio 1.webp" alt=""></div>
+        <div><img class="img__presentation" src="assets/images/img_header_portfolio_1.webp" alt=""></div>
         <div class="presentation__text">
           
           <p class="reveal">Je suis un étudiant de 20 ans et je suis étudiant en Web Design à la <a target="_blank" href="https://www.heaj.be/fr/">Haute École Albert Jacquard.</a></p>
