--- a/workflow-laravel-mix-6-2/src/caseStudy__DesignFiction.html
+++ b/workflow-laravel-mix-6-2/src/caseStudy__DesignFiction.html
@@ -73,15 +73,17 @@
 
     <header class="section section__header__CS">
       <section>
-          <div>
-            <h1 class="eight reveal">Design Fiction</h1>
+          <div class="conteneur_title_DF">
+            <h1 class="title_DF eight reveal">Design Fiction</h1>
           </div>
           <div class="prt2__header__CS">
             <div class="txt">
                 <p class="reveal">Projet CPCJ</p>
               </div>
               <div class="img__header__CS">
-                <img src="assets/images/mockup_designFiction/img_designFiction_header.webp" alt="">
+                <div class="img__header__CS">
+                  <img src="assets/images/mockup_designFiction/img_designFiction_header.webp" alt="">
+                </div>
               </div>
           </div>
       </section>
